examples/test/testpolicy13871.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13871
  namespace: namespace320
spec:
  podSelector:
    matchLabels:
      key18: value25
      key16: value34
      key38: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value18
          key33: value44
      podSelector:
        matchLabels:
          key44: value38
          key30: value36
          key32: value43
